minor fix to correctly align help image.
git-svn-id: svn://svn.code.sf.net/p/opendb/code/opendb/trunk@268 2c52d18a-8f90-4aa0-bf14-52c5ce5e299b

--- a/theme/default/style.css
+++ b/theme/default/style.css
@@ -316,11 +316,6 @@ ul.menu li a:hover, ul.menu li.active a
 	border: 0;
 }
 
-#header ul.headerLinks li.help img
-{
-	vertical-align: middle;
-}
-
 #header ul.headerLinks li.login
 {
 	padding-left: 10px;
